# gtfs-rt-feeds

./: Cargo.toml  lol.csv  public-urls.csv  test.csv  testauth.csv
src/: auth.rs  authlinks.rs  dmfr copy.rs  dmfr.old.rs  dmfr.rs  feeds.rs  gtfs.rs  makecsv.rs  noauth.rs  noauthlinks.rs  swiftly.rs  test.rs
