[package]
name = "catenary-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arguments = "*"
regress = "0.9.0"
serde = "1.0.188"
serde_json = "1.0.107"
typify = "0.0.14"
serde_derive = "*"
serde_repr = "*"

[[bin]]
name = "makecsv"
path = "src/makecsv.rs"


