[package]
name = "catenary-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arguments = "*"
regress = "0.9.0"
serde = "1"
serde_json = "1"
serde_derive = "1"

[[bin]]
name = "makecsv"
path = "src/makecsv.rs"


